Machine learning server being set up to make predictions

--- a/MachineLearning/ARGestureTraining.ipynb
+++ b/MachineLearning/ARGestureTraining.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "579be676",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b135f55d",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2e2f2467",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
        "[1012 rows x 573 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f81e44ba",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "10ff9348",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "16ce43e8",
    "metadata": {},
    "outputs": [
@@ -661,31 +661,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "57ee74e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mradt\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\skl2onnx\\algebra\\onnx_ops.py:159: UserWarning: OpSchema.FormalParameter.typeStr is deprecated and will be removed in 1.16. Use OpSchema.FormalParameter.type_str instead.\n",
-      "  tys = obj.typeStr or ''\n",
-      "C:\\Users\\mradt\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\skl2onnx\\algebra\\automation.py:154: UserWarning: OpSchema.FormalParameter.isHomogeneous is deprecated and will be removed in 1.16. Use OpSchema.FormalParameter.is_homogeneous instead.\n",
-      "  if getattr(obj, 'isHomogeneous', False):\n",
-      "C:\\Users\\mradt\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\jinja2\\environment.py:485: UserWarning: OpSchema.FormalParameter.typeStr is deprecated and will be removed in 1.16. Use OpSchema.FormalParameter.type_str instead.\n",
-      "  return getattr(obj, attribute)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for m in Models:\n",
-    "    m.ExportModelToONNX()"
+    "    m.ExportModel(\"./Server\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "93783848",
    "metadata": {},
    "outputs": [
@@ -738,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "d8862fcc",
    "metadata": {},
    "outputs": [
@@ -759,12 +746,12 @@
     "print(idealK)\n",
     "KNN.TrainModel(\"KNN\", KNNX, dataset.trainY, K = idealK)\n",
     "print(\"KNN MSE\", mean_squared_error(KNN.model.predict(dataset.validateXScaled), dataset.validateY))\n",
-    "KNN.ExportModelToONNX()"
+    "KNN.ExportModel(\"./Server\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "8d09acb3",
    "metadata": {},
    "outputs": [
@@ -897,6 +884,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ea4d2af0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e27fcf",
    "metadata": {},
    "outputs": [],
    "source": []
